# machine

experimentation/media-rs-and-opencv/: Cargo.toml  README.md
experimentation/media-rs-and-opencv/src/: main.rs
