[package]
name = "videocapture-and-opencv"
version = "0.1.0"
edition = "2024"

[features]
opencv-410 = []
opencv-411 = []
default = ["opencv-411"]
linux = [
    # required to avoid compilation error: "a `libclang` shared library is not loaded on this thread"
    "opencv/clang-runtime"
]

[dependencies]
# Computer Vision and Image Processing
opencv           = { version = "0.97.2", features = ["imgcodecs", "imgproc", "objdetect"], default-features = false }
# currently need a version of media-rs with linux support (via libcamera)
media            = { git = "https://github.com/MakerPnP/media-rs", rev = "0db5eb9166edda92f6d6b141e2856c1f6935fd51" }
#media           = { path = "../../../media-rs" }
image            = { version = "0.25.8" }

# GUI Framework and User Interface
egui             = { version = "0.33.0", features = ["persistence"] }
eframe           = { version = "0.33.2", features = ["ron", "serde", "persistence"] }
egui_ltreeview   = { version = "0.6.0", features = ["persistence"] }

# Time and Date Handling
chrono           = { version = "0.4.42" }

# Logging and Debugging
env_logger       = { version = "0.11.8" }
log              = { version = "0.4.28", features = ["release_max_level_debug"] }

# Serialization and Deserialization
serde            = { version = "1.0.228", features = ["derive"] }

[dev-dependencies]
